--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.Slider {
+  flex: 1;
+  width: 60%;
+  margin-top: 100px;  
+}
