--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -18,8 +18,42 @@ code {
   justify-content: center;
 }
 
-.Slider {
-  flex: 1;
-  width: 60%;
-  margin-top: 100px;  
+.slider {
+  align-items: center;
+  width: 70%;
+  padding: 0% 15%;
+  margin-top: 20px;
 }
+
+.slider-main-photo {
+  display: flex;
+  flex-direction: row;
+}
+
+.container {
+  width: 100%;
+  flex: 1;
+  justify-content: center;
+}
+
+.banner {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.logo {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+.navigator {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 600px;
+}
+
+
