--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ code {
   border-radius: 4px;
   padding: 5px;
   width: 150px;
+  cursor: pointer;
 }
 
 .navigator {
@@ -56,4 +57,16 @@ code {
   width: 600px;
 }
 
+.subNews {
+  display: flex;
+}
 
+.subNews-child {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+.clickable-image
+{
+    cursor: pointer;
+}
