--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,12 @@ code {
 }
 
 .App {
-  padding: 10px 0;
-  display: flex;
-  justify-content: center;
+  padding: 10px 40px;
 }
 
 .slider {
   align-items: center;
-  width: 70%;
+
   padding: 0% 15%;
   margin-top: 20px;
 }
@@ -28,6 +26,7 @@ code {
 .slider-main-photo {
   display: flex;
   flex-direction: row;
+  border-radius: 4px;
 }
 
 .container {
@@ -37,9 +36,10 @@ code {
 }
 
 .banner {
-  padding: 0 20px;
+  padding: 10px 20px;
   display: flex;
   flex-direction: row;
+  border-radius: 4px;
 }
 
 .logo {
@@ -54,7 +54,7 @@ code {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 600px;
+  width: 100%;
 }
 
 .subNews {
@@ -67,8 +67,18 @@ code {
   flex: 33.33%;
   padding: 5px;
   align-content: space-between;
+  border-radius: 4px;
 }
 
 .clickable-image {
   cursor: pointer;
+}
+
+.newsDetail {
+  text-align: center;
+}
+
+.spaceAround{
+  padding: 10px;
+  border-radius: 4px;
 }
