--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ code {
 .slider {
   align-items: center;
 
-  padding: 0% 15%;
-  margin-top: 20px;
+
+  margin: 5px;
 }
 
 .slider-main-photo {
@@ -36,9 +36,7 @@ code {
 }
 
 .banner {
-  padding: 10px 20px;
   display: flex;
-  flex-direction: row;
   border-radius: 4px;
 }
 
@@ -46,16 +44,15 @@ code {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
+  max-width: 120px;
+  height: auto;
   cursor: pointer;
 }
 
 .navigator {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
   width: 100%;
 }
+
 
 .subNews {
   display: flex;
@@ -64,10 +61,8 @@ code {
 }
 
 .subNews-child {
-  flex: 33.33%;
   padding: 5px;
   align-content: space-between;
-  border-radius: 4px;
 }
 
 .clickable-image {
