--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Playfair Display", serif;
 }
 
 code {
@@ -18,7 +13,6 @@ code {
 
 .slider {
   align-items: center;
-
   margin: 5px;
 }
 
@@ -28,24 +22,13 @@ code {
   border-radius: 4px;
 }
 
-.container {
-  width: 100%;
-  flex: 1;
-  justify-content: center;
+.center {
+  height: 150;
+  text-align: center;
 }
 
 .banner {
-  display: flex;
   border-radius: 4px;
-}
-
-.logo {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  max-width: 120px;
-  height: auto;
-  cursor: pointer;
 }
 
 .navigator {
@@ -78,4 +61,10 @@ code {
 .spaceAround {
   padding: 7px;
   border-radius: 4px;
+}
+
+.logo {
+  letter-spacing: 3px;
+  font-family: "Playfair Display", serif;
+  cursor: pointer;
 }
