--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,18 @@ code {
     monospace;
 }
 
-
-
 .App {
-  padding: 10px 40px;
+  margin: 10px 1px;
 }
 
 .slider {
-
   align-items: center;
   margin: 5px;
+}
+
+.noPadding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .slider-main-photo {
@@ -34,6 +36,12 @@ code {
   margin: auto;
 }
 
+.centerFlex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .banner {
   border-radius: 4px;
 }
@@ -42,7 +50,7 @@ code {
   width: 100%;
 }
 
-.news{
+.news {
   margin: 0 2%;
 }
 
@@ -53,11 +61,22 @@ code {
 }
 
 .subNews-child {
-  padding: 5px;
+  margin: 8px;
 }
+
 
 .clickable-image {
   cursor: pointer;
+}
+
+.resize {
+  border-radius: 8px;
+  width: 100%;
+}
+
+img.shadow {
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
+    0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
 }
 
 .newsDetail {
@@ -79,4 +98,3 @@ code {
   font-size: 60px;
   cursor: pointer;
 }
-
