--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 .slider {
   align-items: center;
   margin: 5px;
+
 }
 
 .noPadding {
@@ -110,4 +111,5 @@ img.shadow {
   font-family: "Playfair Display", serif;
   font-size: 60px;
   cursor: pointer;
+  width: 100%;
 }
