--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ code {
 .slider {
   align-items: center;
   margin: 5px;
-
 }
 
 .noPadding {
@@ -40,7 +39,6 @@ code {
 
 .buttonCenter {
   position: relative;
-
   margin: 0 auto;
 }
 
@@ -62,7 +60,7 @@ code {
   margin: 0 2%;
 }
 
-.content  img {
+.content img {
   width: auto;
   height: auto;
   max-width: 100%;
@@ -105,11 +103,32 @@ img.shadow {
   padding: 7px;
   border-radius: 4px;
 }
+.centered {
+  position: absolute;
+  top: 30%;
+  left: 1.8%;
+  right: auto;
+  width: 96.66666666666666%;
+  color: #fff;
+}
 
 .logo {
-  letter-spacing: 3px;
-  font-family: "Playfair Display", serif;
-  font-size: 60px;
   cursor: pointer;
   width: 100%;
+  height: fit-content;
+}
+
+.header-text {
+  position: absolute;
+  bottom: 10%;
+  left: 1.8%;
+  right: auto;
+  width: 96.66666666666666%;
+  color: #fff;
+  background-color: black;
+  opacity: 0.7;
+}
+
+.text-center {
+  text-align: center;
 }
