--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,17 @@ img.shadow {
   left: 1.8%;
   right: auto;
   width: 96.66666666666666%;
+  color: black;
+  background-color:white;
+  opacity: 0.9;
+  letter-spacing: -1px
+}
+.sub-header-text {
+  position: absolute;
+  bottom: 4%;
+  left: 1.8%;
+  right: auto;
+  width: 96.66666666666666%;
   color: #fff;
   background-color: black;
   opacity: 0.7;
@@ -131,4 +142,9 @@ img.shadow {
 
 .text-center {
   text-align: center;
+}
+
+.beyaz-manset {
+  font-family: GothamNarrow-Black;
+  font-weight: 900;
 }
