--- a/src/index.css
+++ b/src/index.css
@@ -7,24 +7,22 @@ code {
     monospace;
 }
 
-.App {
-  margin: 10px 1px;
-}
-
 .slider {
-  align-items: center;
-  margin: 5px;
+  margin-left: "3%";
+  margin-right: "4%";
+  margin-bottom: 81;
 }
 
 .noPadding {
-  padding: 0 !important;
-  margin: 0 !important;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
 }
 
 .slider-main-photo {
   display: flex;
   flex-direction: row;
-  border-radius: 4px;
 }
 
 .center {
@@ -48,10 +46,6 @@ code {
   justify-content: center;
 }
 
-.banner {
-  border-radius: 4px;
-}
-
 .navigator {
   width: 100%;
 }
@@ -70,11 +64,12 @@ code {
 .subNews {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+
 }
 
 .subNews-child {
-  margin: 8px;
+  margin-bottom: 8px;
 }
 
 .clickable {
@@ -82,7 +77,6 @@ code {
 }
 
 .resize {
-  border-radius: 8px;
   width: 100%;
 }
 
@@ -115,7 +109,26 @@ img.shadow {
 .logo {
   cursor: pointer;
   width: 100%;
-  height: fit-content;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.ratio {
+  position: relative;
+  width: 100%;
+  padding-top: 56%;
+}
+
+.imgRatio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .header-text {
@@ -125,13 +138,13 @@ img.shadow {
   right: auto;
   width: 96.66666666666666%;
   color: black;
-  background-color:white;
-  opacity: 0.9;
-  letter-spacing: -1px
+  background-color: white;
+  opacity: 0.6;
+  letter-spacing: -1px;
 }
 .sub-header-text {
   position: absolute;
-  bottom: 4%;
+  bottom: 10%;
   left: 1.8%;
   right: auto;
   width: 96.66666666666666%;
