--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,6 @@ code {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-
 }
 
 .subNews-child {
@@ -78,11 +77,6 @@ code {
 
 .resize {
   width: 100%;
-}
-
-img.shadow {
-  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
-    0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
 }
 
 .newsDetail {
@@ -131,6 +125,16 @@ img.shadow {
   height: 100%;
 }
 
+.relativeDiv {
+  width: 100%;
+}
+
+.stretchImg {
+  object-fit: fill;
+  width: 100%;
+  height: 200px;
+}
+
 .header-text {
   position: absolute;
   bottom: 10%;
@@ -139,7 +143,7 @@ img.shadow {
   width: 96.66666666666666%;
   color: black;
   background-color: white;
-  opacity: 0.6;
+  opacity: 0.7;
   letter-spacing: -1px;
 }
 .sub-header-text {
