fix: Seo h4 detail caption category caption

--- a/src/index.css
+++ b/src/index.css
@@ -209,3 +209,11 @@ footer {
 #root {
   background: #f8f8f8;
 }
+
+.h4 {
+  display: block;
+  font-size: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
