--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,14 @@ code {
   margin-bottom: 81;
 }
 
+.containerDesktop {
+  width: 1200px;
+  margin: auto;
+  padding: 0 10px;
+  background: #fff;
+  position: relative;
+}
+
 .noPadding {
   padding-right: 0 !important;
   padding-left: 0 !important;
