--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,8 @@ code {
 }
 
 .containerDesktop {
-  width: 1200px;
+  max-width: 1200px;
   margin: auto;
-  padding: 0 10px;
-  background: #fff;
-  position: relative;
 }
 
 .noPadding {
