--- a/src/index.css
+++ b/src/index.css
@@ -281,3 +281,27 @@ footer {
   font-weight: 100;
   font-size: smaller;
 }
+
+.google-news-subscribe {
+  color: #333;
+  cursor: pointer;
+  font-size: 13px;
+}
+
+.google-news-button {
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  height: 20px;
+  margin: 0 5px;
+  padding: 3px;
+  text-align: center;
+  width: 100px;
+  cursor: pointer;
+}
+
+.google-news {
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 20px;
+}
