--- a/src/index.css
+++ b/src/index.css
@@ -220,6 +220,10 @@ code {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .beyaz-manset {
   font-family: GothamNarrow-Black;
   font-weight: 900;
